--- a/dauber.html
+++ b/dauber.html
@@ -297,16 +297,17 @@
               <font>DIYとメーカーズムーブメントを通って、Kingsizeに学んだ通り、DIYという工程から造形を形成する方法と手段としてメイカームーブメントというデジタルファブリケーションを駆使する事で、本来組み合わせての使用を目的としていない複数の製品を組み合わせて、Dauberという塗布具のプロジェクトを進めている。<br>
                 補足だが、Dauberとは液体用のバルブを指しているのだが、流体部分の名称を拝借したままプロジェクトの名称として使用している。
                 話が長くなるのでこれ以上は掘り下げないが、何しろ、今回は本題のタイトルにある通りマジックインクという製品。
-              早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー、このサイトを知っているのだから説明する必要もない代物であって知らない人はすぐにでもサイトを閉じるべきだ。
-              今回以下、二点の箇所を流用した。<br>
-              1.マジックインクのインク補充容器<br>
+              早速だが、知っている人からすると古くからあり、落書きという分野に足を踏み出すと安価で手に入る塗料として重宝する品物だ、そしてもう一点、流用したのがペイントマーカー。
+              <br>
+              1.マジックインクのインク補充容器
+              <br>
               2.ペイントマーカーのインク流体バルブ
               <br>
-              ぱっぱと進めるが、二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
-              なので存在しない塗布部分をデジタルファブリケーションという概念を取り入れて、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で本来組み合わせる事のない製品を組み合わせて塗布具が出来上がっている。<br>
-              概念と言っても、単語を検索する事でそのものが何を指しているのかを共有しやすくするために文章化しているのだが、本来は勝手に３Dでプリントして遊べと言いたいがそれだとプロジェクトにならない、そしてデジダルツールを駆使するという事が浸透していないという事もあり簡素な説明をしている。<br>
-              次に丸芯の直径サイズが50mmとわりと大きめのサイズ、初期段階では80mmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味を発揮できない、なので50mmにサイズ変更した。<br>
-              その際に色々と変更箇所を模索しながらも、Dauberの形態を徐々に変化する事で、今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。<br>
+              二つの製品は比較的に容易に入手が可能で、本来は製品を組み合わせる事を想定していない。
+              なので存在しない部分をデジタルファブリケーションという概念を取り入れて、３Dのソフトと３Dプリンターを駆使して、マジックインクのスクリューキャップ部分となる、インクホルダーを作る事で塗布具として成立させている。<br>
+              次に丸芯の直径サイズが50mmのサイズ、初期段階では80mmで作っていたのだが、東京という立地条件では、存分に塗布具の持ち味を発揮できない、なので50mmにサイズ変更した。<br>
+              直形50mm幅の塗布部分は人造ウールパッドを使用している。
+              今のMagicIncを流用する事で落書きをする大雑把な性格にはぴったりな物に仕上がった。<br>
               つまり手元に現物がない代物を３Dプリンターという簡易的な造形を生成する装置が見事にピシャリと組み合わさった。良い成功例なのだと思う。
               2021年の今日はどこの世界に行ってっもMagicInkの補充液とペイントマーカーと３Dプリンターがあれば無から有が産まれる。
               デジタルツールの使い方によっては良い物になる良い一例と捉えてもらえれば幸いだ。
