--- a/dauber.html
+++ b/dauber.html
@@ -146,68 +146,68 @@
               <div class="col-2"><small>"👀”</small></div>
               <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Φ50mm</a></small></div>
             </div>
+            <!--target  collapseExample stary-->
+            <div id="collapseExample" class="collapse">
+              <div class="grid_row">
+                <div class="row toybox">
+                  <div class="col-2"><small>Size</small></div>
+                  <div class="col-3 "><small>Scale</small></div>
+                  <div class="col-3"><small>Date</small></div>
+                </div>
+                <div class="row ">
+                  <div class="col-2 toybox"><small>"Φ50”</small></div>
+                  <div class="col-3 toybox"><small>1:1</small></div>
+                  <div class="col-3 toybox"><small>Blender</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&id=1N6aS4LB5x5u-omIwEPaDIehf8ohfknR-"><small>”Download”</small></a>
+                  </div>
+                </div>
+                <div class="row ">
+                  <div class="col-2 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small>STL</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&id=1XKj1RdcnHz7XDeDZq3k2NAnJoopkgdrz"><small>”Download”</small></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--target  collapseExample stary-->
             <!--target end-->
             <!--target staryt-->
             <div class="row">
               <div class="col-2"><small>"👀”</small></div>
-              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">Φ80mm</a></small></div>
+              <div class="col-3"><small><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">Φ80mm</a></small></div>
             </div>
             <!--target end-->
+            <div id="collapseExample2" class="collapse">
+              <div class="grid_row">
+                <div class="row toybox">
+                  <div class="col-2"><small>Size</small></div>
+                  <div class="col-3 "><small>Scale</small></div>
+                  <div class="col-3"><small>Date</small></div>
+                </div>
+                <div class="row ">
+                  <div class="col-2 toybox"><small>"Φ80”</small></div>
+                  <div class="col-3 toybox"><small>1:1</small></div>
+                  <div class="col-3 toybox"><small>Blender</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&id=1ivR9Y6azzccJI3qiqPC_gCgsqx8BQBRH"><small>”Download”</small></a>
+                  </div>
+                </div>
+                <div class="row ">
+                  <div class="col-2 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small></small></div>
+                  <div class="col-3 toybox"><small>STL</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&id=1meKsCGkpM0xpD4VFdQzfVa4hzENgtrTl"><small>”Download”</small></a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <!--target  collapseExample -->
-        <!--target  collapseExample stary-->
-        <div id="collapseExample" class="col-md-6 collapse">
-          <div class="grid_row">
-            <div class="row toybox">
-              <div class="col-2"><small>Size</small></div>
-              <div class="col-3 "><small>Scale</small></div>
-              <div class="col-3"><small>Date</small></div>
-            </div>
-            <div class="row ">
-              <div class="col-2 toybox"><small>"Φ50”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-3 toybox"><small>Blender</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1N6aS4LB5x5u-omIwEPaDIehf8ohfknR-"><small>”Download”</small></a>
-              </div>
-            </div>
-            <div class="row ">
-              <div class="col-2 toybox"><small></small></div>
-              <div class="col-3 toybox"><small></small></div>
-              <div class="col-3 toybox"><small>STL</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1XKj1RdcnHz7XDeDZq3k2NAnJoopkgdrz"><small>”Download”</small></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--target  collapseExample stary-->
-        <div id="collapseExample2" class="col-md-6 collapse">
-          <div class="grid_row">
-            <div class="row toybox">
-              <div class="col-2"><small>Size</small></div>
-              <div class="col-3 "><small>Scale</small></div>
-              <div class="col-3"><small>Date</small></div>
-            </div>
-            <div class="row ">
-              <div class="col-2 toybox"><small>"Φ80”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-3 toybox"><small>Blender</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1ivR9Y6azzccJI3qiqPC_gCgsqx8BQBRH"><small>”Download”</small></a>
-              </div>
-            </div>
-            <div class="row ">
-              <div class="col-2 toybox"><small></small></div>
-              <div class="col-3 toybox"><small></small></div>
-              <div class="col-3 toybox"><small>STL</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1meKsCGkpM0xpD4VFdQzfVa4hzENgtrTl"><small>”Download”</small></a>
-              </div>
-            </div>
-          </div>
-        </div>
         <!--target  collapseExample -->
         <!-- <div class="row toybox">
               <div class="col-3 toybox"><small>"Φ50mm”</small></div>
